# phishing-detector

./: .gitignore  README.md  app.py  evaluate_and_report.py  evaluate_baselines.py  main.py  pyproject.toml  requirements.txt  train_best_model.py  train_ui_model.py
.streamlit/: config.toml
models/: texturl_logreg.joblib
reports/: best_model.json  metrics.json  results.csv
src/phishdetect/: baseline.py  predictor.py
src/phishdetect/features/: urls.py
